syntax = "proto3";
package game;

service GameService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc Ping (PingRequest) returns (PingResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc TerminalStream (stream TerminalClientMessage) returns (stream TerminalServerMessage);
}

message HelloRequest {
  string player_name = 1;
}

message HelloResponse {
  string greeting = 1;
}

message PingRequest {}

message PingResponse {
  int64 server_time_ms = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string player_id = 2;
  string error_message = 3;
}

message TerminalClientMessage {
  oneof msg {
    OpenTerminal open_terminal = 1;
    StdinData stdin = 2;
  }
}

message OpenTerminal {
  string player_id = 1;
}

message StdinData {
  bytes data = 1;
}

message TerminalServerMessage {
  oneof msg {
    TerminalOpened terminal_opened = 1;
    StdoutData stdout = 2;
    TerminalClosed terminal_closed = 3;
    TerminalError terminal_error = 4;
  }
}

message TerminalOpened {
  string session_id = 1;
}

message StdoutData {
  bytes data = 1;
}

message TerminalClosed {}

message TerminalError {
  string message = 1;
}
